# clox

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.zig
cmake/: linux.cmake  macos.cmake  windows.cmake
original/: CMakeLists.txt  chunk.c  common.h  compiler.c  debug.c  main.c  memory.c  object.c  scanner.c  scanner.h  table.c  table.h  vm.c
original/include/: chunk.h  memory.h  object.h
src/: CMakeLists.txt  array.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  internal.c  internal.h  lox.h  main.c  memory.c  memory.h  object.c  opcode.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
src/include/: compiler.h  debug.h  value.h  vm.h
src/vm/: arrays.c  arrays.h  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  lexer.c  lexer.h  memory.c  memory.h  natives.c  natives.h  table.c  table.h  utils.c  utils.h  value.c  value.h  vm.c  vm.h
